--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "*.{cjs,json}": [
       "prettier --write"
     ],
-    "*.{vue}": [
+    "*.{vue,html}": [
       "eslint --fix",
       "prettier --write",
       "stylelint --fix"
